--- a/simplepod-ingress-clusterip/secretreact.yaml
+++ b/simplepod-ingress-clusterip/secretreact.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 data:
-  .dockerconfigjson: 1 #<create this as mentioned below or copy it directly from kubernetes
+  .dockerconfigjson: <my_secret>
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: image-pull-secret-react-ingress
+  name: image-pull-secret-react-ingress  
 type: kubernetes.io/dockerconfigjson
 
 # Create secret like this
