--- a/simplepod-ingress-clusterip/simpleingress_node_clusterip.yaml
+++ b/simplepod-ingress-clusterip/simpleingress_node_clusterip.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: cluser-simpleingress
+    name: cluser-simpleingress-node
 spec:
     selector:
-        app: react-app
+        app: node-basic
     ports:
-    - port: 80
+    - port: 3000
     # targetPort is the port which is container's internal port
-      targetPort: 3232
+      targetPort: 3000
